syntax = "proto2";

package com.google.sps.proto;

option java_outer_classname = "PostJoinProto";

message PostJoinRequest {
  required string roomId = 1;
}

message PostJoinResponse {
  required string roomId = 1;
  required uint64 timestamp = 2;
}
